--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -1,28 +1,9 @@
-daemon off;
-# Heroku dynos have at least 4 cores.
-worker_processes <%= ENV['NGINX_WORKERS'] || 4 %>;
+server {
+  listen ${PORT};
+  root /app;
 
-events {
-  use epoll;
-  accept_mutex on;
-  worker_connections 1024;
-}
-
-http {
-  gzip on;
-  gzip_comp_level 2;
-  gzip_min_length 512;
-
-  server {
-    listen <%= ENV["PORT"] %>;
-    server_name _;
-    keepalive_timeout 5;
-    root /app/;
-    
-    location / {
-      try_files $uri $uri/ =404;
-    }
+  location / {
+    try_files $uri $uri/ =404;
   }
 }
-
 
